[gd_scene load_steps=12 format=3 uid="uid://coyy4gorpq7c6"]

[ext_resource type="Script" uid="uid://byq6ci0kx14ks" path="res://scenes/ui/menu.gd" id="1_rvltp"]
[ext_resource type="PackedScene" uid="uid://bbssswrytbmd4" path="res://scenes/ui/component/goto_button.tscn" id="2_a0qvn"]
[ext_resource type="Texture2D" uid="uid://124r1xgcwhtr" path="res://assets/image/game/title-en.png" id="2_w6y0u"]
[ext_resource type="Texture2D" uid="uid://3v2cuhe1eo0" path="res://assets/image/game/title-jp.png" id="3_cx0sj"]
[ext_resource type="Texture2D" uid="uid://75jnhaqp4uk7" path="res://assets/ui/small_button_normal.png" id="5_1pxh0"]
[ext_resource type="Texture2D" uid="uid://t445jsortehs" path="res://assets/ui/small_button_pressed.png" id="6_e11en"]
[ext_resource type="Texture2D" uid="uid://be1y643wa158j" path="res://assets/ui/small_button_hover.png" id="7_288ov"]
[ext_resource type="Texture2D" uid="uid://6i110jayflqj" path="res://assets/ui/small_button_focused.png" id="8_tub5d"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ntye7"]
atlas = ExtResource("2_w6y0u")
region = Rect2(0, 0, 1024, 768)

[sub_resource type="AtlasTexture" id="AtlasTexture_cghgw"]
atlas = ExtResource("3_cx0sj")
region = Rect2(0, 0, 1024, 768)

[sub_resource type="SpriteFrames" id="SpriteFrames_a2pyb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntye7")
}],
"loop": true,
"name": &"en",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cghgw")
}],
"loop": true,
"name": &"jp",
"speed": 5.0
}]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rvltp")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.498039)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimatedSprite2DTitle" type="AnimatedSprite2D" parent="MarginContainer"]
sprite_frames = SubResource("SpriteFrames_a2pyb")
animation = &"jp"
autoplay = "en"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="GotoButtonStart" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_a0qvn")]
layout_mode = 2
goto_ui_id = &"difficulty"
text = "BUTTON_START"

[node name="GotoButtonSettings" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_a0qvn")]
layout_mode = 2
goto_ui_id = &"settings"
text = "BUTTON_SETTINGS"

[node name="GotoButtonControls" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_a0qvn")]
layout_mode = 2
goto_ui_id = &"controls"
text = "BUTTON_CONTROLS"

[node name="SeparatorFooter" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="ButtonExit" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_a0qvn")]
layout_mode = 2
goto_ui_id = &"exit"
text = "BUTTON_EXIT"
pressed_sfx = &"exit"

[node name="ButtonToggleLocale" parent="MarginContainer" instance=ExtResource("2_a0qvn")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = ExtResource("5_1pxh0")
texture_pressed = ExtResource("6_e11en")
texture_hover = ExtResource("7_288ov")
texture_focused = ExtResource("8_tub5d")
style = "Small"
text = "BUTTON_LOCALE:jp"

[node name="GotoButtonCredits" parent="MarginContainer" instance=ExtResource("2_a0qvn")]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture_normal = ExtResource("5_1pxh0")
texture_pressed = ExtResource("6_e11en")
texture_hover = ExtResource("7_288ov")
texture_focused = ExtResource("8_tub5d")
goto_ui_id = &"credits"
style = "Small"
text = "BUTTON_CREDITS"

[connection signal="pressed" from="MarginContainer/ButtonToggleLocale" to="." method="_on_button_toggle_locale_pressed"]
